--- a/urltest.ini
+++ b/urltest.ini
@@ -1,6 +1,5 @@
 ﻿;设置规则标志位
-surge_rule = DOMAIN-KEYWORD,bing,US
-surge_rule = DOMAIN-KEYWORD,openai,US
+surge_rule = US,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/forceUS.list
 surge_ruleset=REJECT,rules/DivineEngine/Surge/Ruleset/Guard/Hijacking.list
 surge_ruleset=DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
 surge_ruleset=Proxies,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceProxy.list
