--- a/urltest.ini
+++ b/urltest.ini
@@ -1,5 +1,6 @@
 ﻿;设置规则标志位
-surge_ruleset=US,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/forceUS.list
+surge_ruleset=chatGPT,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/chatGpt.list
+surge_ruleset=bing,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/bing.list
 surge_ruleset=REJECT,rules/DivineEngine/Surge/Ruleset/Guard/Hijacking.list
 surge_ruleset=DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
 surge_ruleset=Proxies,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceProxy.list
@@ -21,7 +22,9 @@ surge_ruleset=Proxies,[]MATCH
 ;设置分组标志位
 custom_proxy_group=Proxies`select`[]UrlTest`[]HK`[]SG`[]JP`[]US`[]TW`.*
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
-custom_proxy_group=MicroSoft`select`[]DIRECT`[]Proxies
+custom_proxy_group=MicroSoft`select`[]DIRECT`[]Proxies`[]US
+custom_proxy_group=chatGPT`select`[]DIRECT`[]Proxies`[]US
+custom_proxy_group=bing`select`[]DIRECT`[]Proxies`[]US
 custom_proxy_group=Telegram`select`[]Proxies`[]HK`[]SG
 custom_proxy_group=Netflix`select`[]Proxies`[]HK`[]SG`[]JP`[]US`[]TW`NF|Netflix|NETFLIX|原生|解锁
 custom_proxy_group=Netease`select`[]DIRECT`[]Proxies`NeteaseUnblock|Netease|netease|网易|云音乐
