--- a/urltest.ini
+++ b/urltest.ini
@@ -22,6 +22,7 @@ surge_ruleset=Proxies,[]MATCH
 ;设置分组标志位
 custom_proxy_group=Proxies`select`[]UrlTest`[]HK`[]SG`[]JP`[]US`[]TW`.*
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
+custom_proxy_group=EMBY`select`[]DIRECT`[]Proxies
 custom_proxy_group=MicroSoft`select`[]DIRECT`[]Proxies`[]US
 custom_proxy_group=chatGPT`select`[]DIRECT`[]Proxies`[]US
 custom_proxy_group=bing`select`[]DIRECT`[]Proxies`[]US
