--- a/urltest.ini
+++ b/urltest.ini
@@ -1,6 +1,7 @@
 ﻿;设置规则标志位
 surge_ruleset=chatGPT,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/chatGpt.list
 surge_ruleset=bing,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/bing.list
+surge_ruleset=EMBY,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/EMBY.list
 surge_ruleset=REJECT,rules/DivineEngine/Surge/Ruleset/Guard/Hijacking.list
 surge_ruleset=DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
 surge_ruleset=Proxies,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceProxy.list
