--- a/urltest.ini
+++ b/urltest.ini
@@ -1,41 +1,41 @@
 ﻿;设置规则标志位
-surge_ruleset=chatGPT,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/chatGpt.list
-surge_ruleset=bing,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/bing.list
-surge_ruleset=EMBY,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/EMBY.list
-surge_ruleset=REJECT,rules/DivineEngine/Surge/Ruleset/Guard/Hijacking.list
-surge_ruleset=DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
-surge_ruleset=Proxies,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceProxy.list
-surge_ruleset=Apple,rules/DivineEngine/Surge/Ruleset/Extra/Apple/Apple.list
-surge_ruleset=MicroSoft,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/microsoft.list
-surge_ruleset=Netease,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/netease.list
-surge_ruleset=Telegram,rules/DivineEngine/Surge/Ruleset/Extra/Telegram/Telegram.list
-surge_ruleset=Netflix,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/netflix.list
-surge_ruleset=HKMTMedia,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/HKMTMedia.list
-surge_ruleset=Proxies,rules/DivineEngine/Surge/Ruleset/StreamingMedia/Streaming.list
-surge_ruleset=Proxies,rules/DivineEngine/Surge/Ruleset/Global.list
-surge_ruleset=DIRECT,rules/LocalAreaNetwork.list
-surge_ruleset=DIRECT,rules/DivineEngine/Surge/Ruleset/Unbreak.list
-surge_ruleset=DIRECT,rules/DivineEngine/Surge/Ruleset/China.list
-surge_ruleset=DIRECT,[]GEOIP,CN
-surge_ruleset=Proxies,[]MATCH
+surge_ruleset=⚙chatGPT,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/chatGpt.list
+surge_ruleset=🔍bing,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/bing.list
+surge_ruleset=🎬EMBY,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/EMBY.list
+surge_ruleset=🛑REJECT,rules/DivineEngine/Surge/Ruleset/Guard/Hijacking.list
+surge_ruleset=🎯DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
+surge_ruleset=🚀Proxies,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceProxy.list
+surge_ruleset=🍎Apple,rules/DivineEngine/Surge/Ruleset/Extra/Apple/Apple.list
+surge_ruleset=ⓂMicroSoft,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/microsoft.list
+surge_ruleset=🌀Netease,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/netease.list
+surge_ruleset=✈️Telegram,rules/DivineEngine/Surge/Ruleset/Extra/Telegram/Telegram.list
+surge_ruleset=📟Netflix,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/netflix.list
+surge_ruleset=📺HKMTMedia,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/HKMTMedia.list
+surge_ruleset=🚀Proxies,rules/DivineEngine/Surge/Ruleset/StreamingMedia/Streaming.list
+surge_ruleset=🚀Proxies,rules/DivineEngine/Surge/Ruleset/Global.list
+surge_ruleset=🎯DIRECT,rules/LocalAreaNetwork.list
+surge_ruleset=🎯DIRECT,rules/DivineEngine/Surge/Ruleset/Unbreak.list
+surge_ruleset=🎯DIRECT,rules/DivineEngine/Surge/Ruleset/China.list
+surge_ruleset=🎯DIRECT,[]GEOIP,CN
+surge_ruleset=🚀Proxies,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]UrlTest`[]HK`[]SG`[]JP`[]US`[]TW`.*
-custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
-custom_proxy_group=EMBY`select`[]DIRECT`[]Proxies
-custom_proxy_group=MicroSoft`select`[]DIRECT`[]Proxies`[]US
-custom_proxy_group=chatGPT`select`[]DIRECT`[]Proxies`[]US
-custom_proxy_group=bing`select`[]DIRECT`[]Proxies`[]US
-custom_proxy_group=Telegram`select`[]Proxies`[]HK`[]SG
-custom_proxy_group=Netflix`select`[]Proxies`[]HK`[]SG`[]JP`[]US`[]TW`NF|Netflix|NETFLIX|原生|解锁
-custom_proxy_group=Netease`select`[]DIRECT`[]Proxies`NeteaseUnblock|Netease|netease|网易|云音乐
-custom_proxy_group=HKMTMedia`select`[]DIRECT`[]Proxies`[]HK`[]TW
-custom_proxy_group=UrlTest`url-test`.*`http://www.gstatic.com/generate_204`300
-custom_proxy_group=HK`select`港|HK|(Hong Kong)
-custom_proxy_group=SG`select`新|狮城|SG|Singapore
-custom_proxy_group=TW`select`台|新北|彰化|TW|Taiwan
-custom_proxy_group=JP`url-test`日((?!用).)+|东京|大阪|埼玉|JP|Japan`http://www.gstatic.com/generate_204`600
-custom_proxy_group=US`select`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图|US|USA|America|United States
+custom_proxy_group=🚀Proxies`select`[]UrlTest`[]HK`[]SG`[]JP`[]US`[]TW`.*
+custom_proxy_group=🍎Apple`select`[]DIRECT`[]Proxies
+custom_proxy_group=🎬EMBY`select`[]DIRECT`[]Proxies
+custom_proxy_group=Ⓜ️MicroSoft`select`[]DIRECT`[]Proxies`[]US
+custom_proxy_group=⚙️chatGPT`select`[]DIRECT`[]Proxies`[]US
+custom_proxy_group=🔍bing`select`[]DIRECT`[]Proxies`[]US
+custom_proxy_group=✈️Telegram`select`[]Proxies`[]HK`[]SG
+custom_proxy_group=📟Netflix`select`[]Proxies`[]HK`[]SG`[]JP`[]US`[]TW`NF|Netflix|NETFLIX|原生|解锁
+custom_proxy_group=🌀Netease`select`[]DIRECT`[]Proxies`NeteaseUnblock|Netease|netease|网易|云音乐
+custom_proxy_group=📺HKMTMedia`select`[]DIRECT`[]Proxies`[]HK`[]TW
+custom_proxy_group=♻UrlTest`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇭🇰HK`select`港|HK|(Hong Kong)
+custom_proxy_group=🇸🇬SG`select`新|狮城|SG|Singapore
+custom_proxy_group=🇹🇼TW`select`台|新北|彰化|TW|Taiwan
+custom_proxy_group=🇯🇵JP`url-test`日((?!用).)+|东京|大阪|埼玉|JP|Japan`http://www.gstatic.com/generate_204`600
+custom_proxy_group=🇺🇸US`select`美|洛杉矶|硅谷|达拉斯|费利蒙|凤凰城|芝加哥|圣何塞|西雅图|US|USA|America|United States
 ;设置分组标志位
 
