--- a/urltest.ini
+++ b/urltest.ini
@@ -21,16 +21,16 @@ surge_ruleset=🚀Proxies,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀Proxies`select`[]UrlTest`[]HK`[]SG`[]JP`[]US`[]TW`.*
-custom_proxy_group=🍎Apple`select`[]DIRECT`[]Proxies
-custom_proxy_group=🎬EMBY`select`[]DIRECT`[]Proxies
-custom_proxy_group=Ⓜ️MicroSoft`select`[]DIRECT`[]Proxies`[]US
-custom_proxy_group=⚙️chatGPT`select`[]DIRECT`[]Proxies`[]US
-custom_proxy_group=🔍bing`select`[]DIRECT`[]Proxies`[]US
-custom_proxy_group=✈️Telegram`select`[]Proxies`[]HK`[]SG
-custom_proxy_group=📟Netflix`select`[]Proxies`[]HK`[]SG`[]JP`[]US`[]TW`NF|Netflix|NETFLIX|原生|解锁
-custom_proxy_group=🌀Netease`select`[]DIRECT`[]Proxies`NeteaseUnblock|Netease|netease|网易|云音乐
-custom_proxy_group=📺HKMTMedia`select`[]DIRECT`[]Proxies`[]HK`[]TW
+custom_proxy_group=🚀Proxies`select`[]♻UrlTest`[]🇭🇰HK`[]🇸🇬SG`[]🇯🇵JP`[]🇺🇸US`[]🇹🇼TW`.*
+custom_proxy_group=🍎Apple`select`[]🎯DIRECT`[]🚀Proxies
+custom_proxy_group=🎬EMBY`select`[]🎯DIRECT`[]🚀Proxies
+custom_proxy_group=Ⓜ️MicroSoft`select`[]🎯DIRECT`[]🚀Proxies`[]🇺🇸US
+custom_proxy_group=⚙️chatGPT`select`[]🎯DIRECT`[]🚀Proxies`[]🇺🇸US
+custom_proxy_group=🔍bing`select`[]🎯DIRECT`[]🚀Proxies`[]🇺🇸US
+custom_proxy_group=✈️Telegram`select`[]🚀Proxies`[]🇭🇰HK`[]🇸🇬SG
+custom_proxy_group=📟Netflix`select`[]🚀Proxies`[]🇭🇰HK`[]🇸🇬SG`[]🇯🇵JP`[]🇺🇸US`[]🇹🇼TW`NF|Netflix|NETFLIX|原生|解锁
+custom_proxy_group=🌀Netease`select`[]🎯DIRECT`[]🚀Proxies`NeteaseUnblock|Netease|netease|网易|云音乐
+custom_proxy_group=📺HKMTMedia`select`[]🎯DIRECT`[]🚀Proxies`[]🇭🇰HK`[]🇹🇼TW
 custom_proxy_group=♻UrlTest`url-test`.*`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇭🇰HK`select`港|HK|(Hong Kong)
 custom_proxy_group=🇸🇬SG`select`新|狮城|SG|Singapore
