--- a/urltest.ini
+++ b/urltest.ini
@@ -3,7 +3,7 @@ surge_ruleset=⚙chatGPT,https://raw.githubusercontent.com/tanghululalala/clashC
 surge_ruleset=🔍bing,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/bing.list
 surge_ruleset=🎬EMBY,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/EMBY.list
 surge_ruleset=🛑REJECT,rules/DivineEngine/Surge/Ruleset/Guard/Hijacking.list
-surge_ruleset=🎯DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
+surge_ruleset=DIRECT,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceDirect.list
 surge_ruleset=🚀Proxies,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/ForceProxy.list
 surge_ruleset=🍎Apple,rules/DivineEngine/Surge/Ruleset/Extra/Apple/Apple.list
 surge_ruleset=ⓂMicroSoft,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/microsoft.list
@@ -13,10 +13,10 @@ surge_ruleset=📟Netflix,https://subconverter.oss-ap-southeast-1.aliyuncs.com/R
 surge_ruleset=📺HKMTMedia,https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RuleSet/Media/HKMTMedia.list
 surge_ruleset=🚀Proxies,rules/DivineEngine/Surge/Ruleset/StreamingMedia/Streaming.list
 surge_ruleset=🚀Proxies,rules/DivineEngine/Surge/Ruleset/Global.list
-surge_ruleset=🎯DIRECT,rules/LocalAreaNetwork.list
-surge_ruleset=🎯DIRECT,rules/DivineEngine/Surge/Ruleset/Unbreak.list
-surge_ruleset=🎯DIRECT,rules/DivineEngine/Surge/Ruleset/China.list
-surge_ruleset=🎯DIRECT,[]GEOIP,CN
+surge_ruleset=DIRECT,rules/LocalAreaNetwork.list
+surge_ruleset=DIRECT,rules/DivineEngine/Surge/Ruleset/Unbreak.list
+surge_ruleset=DIRECT,rules/DivineEngine/Surge/Ruleset/China.list
+surge_ruleset=DIRECT,[]GEOIP,CN
 surge_ruleset=🚀Proxies,[]MATCH
 ;设置规则标志位
 
