--- a/urltest1.ini
+++ b/urltest1.ini
@@ -8,6 +8,8 @@
 ;苹果分流：支持
 ;增强中国IP段：不支持
 ;增强国外GFW：不支持
+;单独指定ChatGPT和Bing使用US节点
+;单独指定EMBY走直连
 
 ruleset=⚙ chatGPT,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/chatGpt.list
 ruleset=🔍 bing,https://raw.githubusercontent.com/tanghululalala/clashConfig/main/bing.list
